--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-apollo": "^2.5.6",
     "react-native": "0.59.9",
     "react-native-router-flux": "^4.0.6",
+    "react-native-swipe-gestures": "^1.0.3",
     "react-native-video": "^4.4.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
