--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.8.3",
     "react-apollo": "^2.5.6",
     "react-native": "0.59.9",
+    "react-native-auto-height-image": "^1.1.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-swipe-gestures": "^1.0.3",
     "react-native-video": "^4.4.1",
